--- a/openag_pio/data/index.html
+++ b/openag_pio/data/index.html
@@ -26,7 +26,7 @@
     <div id="focuser"></div>
     <!-- form connect-->
     <div class="form-popup" id="myForm">
-        <form action="/" class="form-container" style="width: 500px;">
+        <form action="/connect" class="form-container" style="width: 500px;" method="post">
             <div class="form-header">
                 <h2>Connect to <span id="ssid_field"></span></h2>
             </div>
